--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="gitItem"
-            type="com.example.appdaniela.models.GitRepListInfo" />
+            type="com.example.appdaniela.models.RoomModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="38dp"
             android:layout_marginTop="25dp"
-            android:text="@{`login: `+gitItem.owner.login}"
+            android:text="@{`login: `+gitItem.login}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="38dp"
             android:layout_marginTop="25dp"
-            android:text="@{`url: `+gitItem.owner.url}"
+            android:text="@{`url: `+gitItem.url}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
