--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -18,7 +18,6 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"/>
-
     </fragment>
 
     <fragment
@@ -29,7 +28,7 @@
 
         <argument
             android:name="gitItemArg"
-            app:argType="com.example.appdaniela.models.GitRepListInfo" />
+            app:argType="com.example.appdaniela.models.RoomModel" />
     </fragment>
 
 </navigation>
