se elimino la clase RoomModelNoDB

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -28,7 +28,7 @@
 
         <argument
             android:name="gitItemArg"
-            app:argType="com.example.appdaniela.models.RoomModelNoDb" />
+            app:argType="com.example.appdaniela.models.RoomModel" />
     </fragment>
 
 </navigation>
