--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -10,39 +10,62 @@
    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/items_git_repos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#E9E9E9">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="@{gitItem.name}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{gitItem.login}"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/card_item"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/card_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            android:background="@color/black"
-            />
 
+        <TextView
+            android:id="@+id/title_film"
+            style="@style/subtexto_solic"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:text="@{gitItem.title}"
+            app:layout_constraintBottom_toBottomOf="@+id/card_item"
+            app:layout_constraintEnd_toEndOf="@+id/card_item"
+            app:layout_constraintStart_toStartOf="@+id/card_item"
+            app:layout_constraintTop_toTopOf="@+id/card_item" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageNasa"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:visibility="gone"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/card_item"
+            app:layout_constraintEnd_toEndOf="@+id/card_item"
+            app:layout_constraintHorizontal_bias="0.118"
+            app:layout_constraintStart_toStartOf="@+id/card_item"
+            app:layout_constraintTop_toTopOf="@+id/card_item"
+            app:layout_constraintVertical_bias="0.5" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/appCompatImageView"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/ic_estrella"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/card_item"
+            app:layout_constraintEnd_toEndOf="@+id/card_item"
+            app:layout_constraintTop_toTopOf="@+id/card_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
