--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,22 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-</resources>
+
+    <style name="subtexto_solic">
+        <item name="android:textSize">13sp</item>
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textColor">#898989</item>
+    </style>
+
+    <style name="subtexto_solic_mini">
+        <item name="android:textSize">9sp</item>
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textColor">#898989</item>
+    </style>
+
+    <style name="mis_servici">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#004461</item>
+    </style>
+
+    </resources>
