--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,8 +6,8 @@
 
     <data>
         <variable
-            name="gitItem"
-            type="com.example.appdaniela.models.RoomModel" />
+            name="viewModel"
+            type="com.example.appdaniela.viewModels.DetailsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,14 +25,24 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/favourite_boton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="23dp"
+                    android:layout_marginTop="52dp"
+                    android:textColor="#2859FF"
+                    android:textSize="11dp"
+                    app:layout_constraintStart_toStartOf="@+id/title_details"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="@{viewModel.selectedValue.favourite?`Quitar de favoritos`:`Añadir a favoritos`}"
+                    tools:text="Añadir a favoritos" />
+
+                <TextView
                     android:id="@+id/title_details"
                     android:layout_width="300dp"
                     android:gravity="center"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="100dp"
-                    android:text="@{gitItem.title}"
-                    android:textColor="#2859FF"
-                    android:textSize="12dp"
+                    android:text="@{viewModel.selectedValue.title}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -55,7 +65,7 @@
                         style="@style/mis_servici"
                         android:layout_width="240dp"
                         android:layout_height="wrap_content"
-                        android:text="@{gitItem.description}"
+                        android:text="@{viewModel.selectedValue.description}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +78,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_width="92dp"
                         android:layout_height="16dp"
-                        android:text="@{`Precio: `+gitItem.prices}"
+                        android:text="@{`Precio: `+viewModel.selectedValue.prices}"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/details_title" />
 
