--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -7,6 +7,7 @@
        <variable
            name="gitItem"
            type="com.example.appdaniela.models.RoomModel" />
+       <import type="android.view.View"/>
    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,6 +41,7 @@
             android:text="@{gitItem.title}"
             app:layout_constraintBottom_toBottomOf="@+id/card_item"
             app:layout_constraintEnd_toEndOf="@+id/card_item"
+            app:layout_constraintHorizontal_bias="0.284"
             app:layout_constraintStart_toStartOf="@+id/card_item"
             app:layout_constraintTop_toTopOf="@+id/card_item" />
 
@@ -58,14 +60,14 @@
             app:layout_constraintVertical_bias="0.5" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/appCompatImageView"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="16dp"
+            android:id="@+id/fav_image"
+            android:layout_width="18dp"
+            android:layout_height="21dp"
+            android:visibility="@{gitItem.favourite?View.VISIBLE:View.GONE}"
             android:background="@drawable/ic_estrella"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/card_item"
             app:layout_constraintEnd_toEndOf="@+id/card_item"
+            app:layout_constraintStart_toEndOf="@+id/title_film"
             app:layout_constraintTop_toTopOf="@+id/card_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
