--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
    <data>
        <variable
@@ -16,10 +15,12 @@
         android:background="#E9E9E9">
 
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/card_item"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="60dp"
+            android:paddingBottom="60dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
@@ -30,20 +31,20 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0" >
 
 
-        <TextView
-            android:id="@+id/title_film"
-            style="@style/subtexto_solic"
-            android:layout_width="125dp"
-            android:layout_height="wrap_content"
-            android:text="@{gitItem.title}"
-            app:layout_constraintBottom_toBottomOf="@+id/card_item"
-            app:layout_constraintEnd_toEndOf="@+id/card_item"
-            app:layout_constraintHorizontal_bias="0.284"
-            app:layout_constraintStart_toStartOf="@+id/card_item"
-            app:layout_constraintTop_toTopOf="@+id/card_item" />
+            <TextView
+                android:id="@+id/title_film"
+                style="@style/subtexto_solic"
+                android:layout_width="180dp"
+                android:layout_height="38dp"
+                android:text="@{`id: `+gitItem.id +`\n\n`+ `title: `+gitItem.title}"
+                app:layout_constraintBottom_toBottomOf="@+id/card_item"
+                app:layout_constraintEnd_toEndOf="@+id/card_item"
+                app:layout_constraintHorizontal_bias="0.284"
+                app:layout_constraintStart_toStartOf="@+id/card_item"
+                app:layout_constraintTop_toTopOf="@+id/card_item" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageNasa"
@@ -69,5 +70,6 @@
             app:layout_constraintEnd_toEndOf="@+id/card_item"
             app:layout_constraintStart_toEndOf="@+id/title_film"
             app:layout_constraintTop_toTopOf="@+id/card_item" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
