--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -15,10 +15,7 @@
         android:layout_height="match_parent"
         android:background="#E9E9E9">
 
-        <ScrollView
-            android:id="@+id/scroll"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -30,11 +27,20 @@
                     android:layout_height="23dp"
                     android:layout_marginTop="52dp"
                     android:textColor="#2859FF"
-                    android:textSize="11dp"
+                    android:textSize="15dp"
                     app:layout_constraintStart_toStartOf="@+id/title_details"
                     app:layout_constraintTop_toTopOf="parent"
                     android:text="@{viewModel.selectedValue.favourite?`Quitar de favoritos`:`Añadir a favoritos`}"
                     tools:text="Añadir a favoritos" />
+
+                <ImageView
+                    android:id="@+id/erase_post"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@android:drawable/ic_delete"
+                    app:layout_constraintEnd_toEndOf="@+id/title_details"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/title_details"
@@ -42,52 +48,34 @@
                     android:gravity="center"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="100dp"
-                    android:text="@{viewModel.selectedValue.title}"
+                    android:text="@{`Nombre de usuario:\n`+viewModel.user.name}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <TextView
+                    android:id="@+id/title_post"
                     android:layout_width="300dp"
+                    android:layout_marginTop="20dp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/card_background"
-                    android:padding="20dp"
-                    android:layout_marginTop="25dp"
-                    android:paddingTop="20dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:gravity="center"
+                    android:text="@{`Titulo del post:\n`+viewModel.selectedValue.title}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/title_details">
+                    app:layout_constraintTop_toBottomOf="@+id/title_details" />
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/details_title"
-                        style="@style/mis_servici"
-                        android:layout_width="240dp"
-                        android:layout_height="wrap_content"
-
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/details_realese"
-                        style="@style/subtexto_solic"
-                        android:layout_marginTop="20dp"
-                        android:layout_width="92dp"
-                        android:layout_height="16dp"
-
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/details_title" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_comment"
+                    android:layout_width="337dp"
+                    android:layout_height="514dp"
+                    android:layout_marginTop="20dp"
+                    android:visibility="visible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/title_post" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
