--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -25,7 +25,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/refresh"
-            android:layout_width="200dp"
+            android:layout_width="180dp"
             android:layout_height="0dp"
             style="@style/subtexto_solic"
             android:text="Refrescar"
@@ -35,9 +35,10 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/clear"
-            android:layout_width="200dp"
+            android:layout_width="180dp"
             android:layout_height="0dp"
             style="@style/subtexto_solic"
+            android:textSize="14sp"
             android:text="Borrar no favoritos"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
