--- a/app/src/main/res/layout/post_item_layout.xml
+++ b/app/src/main/res/layout/post_item_layout.xml
@@ -39,7 +39,7 @@
                 style="@style/subtexto_solic"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:text="@{`id: `+gitItem.id +`\n`+ `title: `+gitItem.title}"
+                android:text="@{`title: `+gitItem.title}"
                 app:layout_constraintBottom_toBottomOf="@+id/card_item"
                 app:layout_constraintEnd_toEndOf="@+id/card_item"
                 app:layout_constraintHorizontal_bias="0.284"
