--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -30,8 +30,7 @@
                     android:textSize="15dp"
                     app:layout_constraintStart_toStartOf="@+id/title_details"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:text="@{
-                    viewModel.selectedValue.favourite?`Quitar de favoritos`:`Añadir a favoritos`}"
+                    android:text="@{viewModel.selectedValue.favourite?`Quitar de favoritos`:`Añadir a favoritos`}"
                     tools:text="Añadir a favoritos" />
 
                 <ImageView
@@ -49,32 +48,21 @@
                     android:gravity="center"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="100dp"
-                    android:text="@{`Nombre de usuario:\n`+viewModel.user.name}"
+                    android:text="@{`Nombre de usuario:\n`+viewModel.selectedValue.name}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/title_post"
-                    android:layout_width="300dp"
+                     android:layout_width="300dp"
                     android:layout_marginTop="20dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@{`Titulo del post:\n`+viewModel.selectedValue.title}"
+                    android:text="@{`Titulo del post:\n`+viewModel.selectedValue.description}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/title_details" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_comment"
-                    android:layout_width="337dp"
-                    android:layout_height="514dp"
-                    android:layout_marginTop="20dp"
-                    android:visibility="visible"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/title_post" />
-
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
