--- a/app/src/main/res/layout/post_item_layout.xml
+++ b/app/src/main/res/layout/post_item_layout.xml
@@ -39,26 +39,22 @@
                 style="@style/subtexto_solic"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:text="@{`title: `+gitItem.name}"
-                app:layout_constraintBottom_toBottomOf="@+id/card_item"
+                android:text="@{gitItem.name}"
                 app:layout_constraintEnd_toEndOf="@+id/card_item"
                 app:layout_constraintHorizontal_bias="0.284"
                 app:layout_constraintStart_toStartOf="@+id/card_item"
-                app:layout_constraintTop_toTopOf="@+id/card_item" />
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageNasa"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:visibility="gone"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toBottomOf="@+id/card_item"
-            app:layout_constraintEnd_toEndOf="@+id/card_item"
-            app:layout_constraintHorizontal_bias="0.118"
-            app:layout_constraintStart_toStartOf="@+id/card_item"
-            app:layout_constraintTop_toTopOf="@+id/card_item"
-            app:layout_constraintVertical_bias="0.5" />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image_food"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:loadImage="@{gitItem.image}"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="@+id/card_item"
+                app:layout_constraintHorizontal_bias="0.118"
+                app:layout_constraintStart_toStartOf="@+id/card_item"
+                app:layout_constraintTop_toBottomOf="@+id/title_film" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/fav_image"
