--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -64,6 +64,43 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/title_details" />
 
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/gps"
+                    android:layout_width="269dp"
+                    android:layout_height="150dp"
+                    android:background="@drawable/card_background"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/title_post"
+                    app:layout_constraintVertical_bias="0.177" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/gps_icon"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/ic_baseline_gps_fixed_24"
+                    app:layout_constraintBottom_toBottomOf="@+id/gps"
+                    app:layout_constraintEnd_toEndOf="@+id/gps"
+                    app:layout_constraintHorizontal_bias="0.15"
+                    app:layout_constraintStart_toStartOf="@+id/gps"
+                    app:layout_constraintTop_toTopOf="@+id/gps"
+                    app:layout_constraintVertical_bias="0.5" />
+
+                <TextView
+                    android:id="@+id/gps_text"
+                    style="@style/subtexto_solic"
+                    android:textSize="11sp"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:text="Localization"
+                    app:layout_constraintBottom_toBottomOf="@+id/gps"
+                    app:layout_constraintEnd_toEndOf="@+id/gps"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/gps_icon"
+                    app:layout_constraintTop_toTopOf="@+id/gps" />
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
