--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -4,17 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".fragments.FilmDetailsFragment">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.appdaniela.viewModels.IntroViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#E9E9E9">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/filter"
+            android:layout_marginEnd="40dp"
+            android:layout_marginStart="40dp"
+            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:text="@{viewModel.filterValue}"
+            android:onTextChanged="@{(chr,i1,i2,i3)-> viewModel.fieldTextChanged(chr, @id/filter)}"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/filter_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="Filtrar"
+            app:layout_constraintStart_toStartOf="@+id/filter"
+            app:layout_constraintTop_toBottomOf="@+id/filter" />
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
-            android:layout_height="662dp"
+            android:layout_height="590dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/filter_label">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_post"
@@ -43,6 +68,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/swipe_refresh" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
